# rust

./: LICENSE  README.md
assert_cmd/: Cargo.toml
assert_cmd/src/: main.rs
catr/: Cargo.toml
catr/src/: lib.rs  main.rs
catr/tests/: cli.rs
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
hello_cargo/: Cargo.toml
hello_cargo/src/: main.rs  prime_gap  prime_gap.rs
parse_test/: Cargo.toml
parse_test/src/: main.rs
