[package]
name = "catr"
version = "0.1.0"
authors = ["Araldo van de Kraats <a.vandekraats@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~2.33"

[dev-dependencies]
assert_cmd = "1"
predicates = "1"